Fix:When there are multiple lines of tabs, the second line is not visible

--- a/src/style.css
+++ b/src/style.css
@@ -53,7 +53,6 @@ webview.visible {
   font-size: var(--tab-font-size);
   display: none;
   width: 100%;
-  height: 32px;
   cursor: default;
   -webkit-user-select: none;
   user-select: none;
@@ -65,6 +64,7 @@ webview.visible {
 
 .tabs {
   height: 100%;
+  z-index: 9999;
 }
 
 .tab {
